# riptar

./: Cargo.toml  README.md  vercel.json  wrangler.toml
.github/workflows/: deploy.yml
api/: dither.rs
api/riptar/: [name].rs
public/: 404.html  index.html
src/: lib.rs
