[package]
name = "riptar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.6"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
resvg = "0.37.0"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = "1.35.1"
url = "2.5.0"
vercel_runtime = "1.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "riptar"
path = "api/riptar/[name].rs"

[[bin]]
name = "dither"
path = "api/dither.rs"
