[package]
name = "riptar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.25.6"
resvg = "0.37.0"
serde = "1.0.195"
serde_json = "1.0.111"
url = "2.5.0"
worker = "0.7"
worker-macros = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
